packages/isar_community_generator/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar_community/isar_community.dart';

@collection
class Model {
  Model.create();

  Id? id;
}
